# localshellc

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  ChangeLog.git  Makefile.am  NEWS  README  README.in  THANKS  config.h.in  configure.ac  cvs2cl.ufile  reconf
config/: .gitignore
doc/: Makefile.am  localshell.conf.cluster-galaxy  localshell.conf.complex  localshell.conf.simple
src/: .cvsignore  .gitignore  Makefile.am  common.cxx  common.hh  config.cxx  config.hh  localshell.conf  localshell.conf.example  localshell.cxx  structures.hh  validate.cxx
