# Copyright (C) 2005 Robin Hugh Johnson <robbat2 AT orbis-terrarum.net>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

dist_docs = localshell.conf.complex localshell.conf.simple localshell.conf.cluster-galaxy
EXTRA_DIST = $(dist_docs)
docsdir = $(datadir)/doc/$(PACKAGE_NAME)-$(PACKAGE_VERSION)/
docs_DATA = $(dist_docs)
